# stk-demo

./: CMakeLists.txt
include/: SineGen.h  SynthConfig.h  TermInput.h  Utility.h
src/: SineGen.cpp  StkNoise.cpp  StkRT.cpp  StkSine.cpp  SynthConfig.cpp  T.cpp  TermInput.cpp  Utility.cpp  main.cpp
